# VitaMips

./: README.md
kermit/: Makefile  exports.exp  main.c  sceSuspendForKernel.S
launcher/: CMakeLists.txt  main.c  payload.h
libkermit/: Makefile  kermit.c  kermit.h
payload/: Makefile  main.c  start.S
pcbctool/: Makefile  crypto.c  kirk_engine.c  kirk_engine.h  pcbctool.c
sample/: Makefile  main.c
